test/expected/declare_nri.out
declare x as non-returning int
        ^
9: error: "non-returning" can only appear on functions
